modify repo layer, config, constants, somes models